--- a/mainwindow_ui.ui
+++ b/mainwindow_ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1019</width>
-    <height>702</height>
+    <width>977</width>
+    <height>700</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -351,6 +351,41 @@
                  </layout>
                 </item>
                 <item>
+                 <widget class="QFrame" name="frame">
+                  <property name="minimumSize">
+                   <size>
+                    <width>0</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                  <property name="frameShape">
+                   <enum>QFrame::NoFrame</enum>
+                  </property>
+                  <property name="frameShadow">
+                   <enum>QFrame::Raised</enum>
+                  </property>
+                  <layout class="QHBoxLayout" name="horizontalLayout_2">
+                   <item>
+                    <widget class="QLineEdit" name="lineEdit"/>
+                   </item>
+                   <item>
+                    <widget class="QPushButton" name="btnFind">
+                     <property name="text">
+                      <string>Найти</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
+                    <widget class="QPushButton" name="btnClear">
+                     <property name="text">
+                      <string>Очистить</string>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
+                 </widget>
+                </item>
+                <item>
                  <widget class="QTableWidget" name="tableWidget">
                   <property name="sortingEnabled">
                    <bool>true</bool>
@@ -432,7 +467,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1019</width>
+     <width>977</width>
      <height>21</height>
     </rect>
    </property>
